[package]
name = "aliyun-ms-sdk"
version = "0.1.0"
authors = ["dev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.10"
hmac = "0.10"
sha-1 = "0.9"
thiserror = "1.0.22"
form_urlencoded = "1.0"

[dev-dependencies]
tokio-test = "0.2"
